--- a/src/components/produtos/index.module.css
+++ b/src/components/produtos/index.module.css
@@ -22,6 +22,7 @@
   align-items: center;
   cursor: grab;
   overflow: hidden;
+  box-shadow: 3px 0px 0px 3px rgba(0, 0, 0, 0.10);
 }
 
 #divHortalicas {
