--- a/src/components/produtos/index.module.css
+++ b/src/components/produtos/index.module.css
@@ -6,15 +6,9 @@
   margin: auto;
 }
 
-.swiper {
-  width: 100%;
-  height: 100%;
-}
-
 .swiper__slide {
   text-align: center;
-  font-size: 18px;
-  border-radius: 50px;
+  border-radius: 20px;
   width: 25rem !important;
   height: 30rem !important;
   display: flex;
@@ -22,7 +16,7 @@
   align-items: center;
   cursor: grab;
   overflow: hidden;
-  box-shadow: 3px 0px 0px 3px rgba(0, 0, 0, 0.10);
+  box-shadow: 2px 4px 12px rgba(0,0,0,.08);
 }
 
 #divHortalicas {
@@ -66,37 +60,53 @@
   flex-direction: column;
   color: #fff;
   justify-content: space-between;
-  opacity: 0;
+  opacity: 1;
   transition: opacity 0.3s ease;
+  align-items: center;
 }
 
 .capaEscura div:nth-child(1) {
   display: flex;
   justify-content: flex-start;
+  flex-direction: column;
 }
 
-.capaEscura div:nth-child(2) {
+.capaEscura div:nth-child(3) {
   display: flex;
   align-items: center;
   justify-content: flex-end;
 }
 
-.containerHeader {
+.container__tituloSessoes{
+  font-size: 28px;  
+  font-weight: 600;
+  display: flex;
+  align-items: center;
   max-width: 1280px;
   margin: auto;
   margin-top: 3rem;
 }
 
-.divConteudoCard {
-  color: #fff;
+.container__tituloSessoes h2{
+  color: #1d1d1f;
 }
 
-.swiper__slide:hover .capaEscura {
-  opacity: 1 !important;
+.container__tituloSessoes span{
+  color: #6e6e73;
+}
+
+.imgSlide{
+  opacity: 0.9;
+  width: 10vmax;
+  height: auto;
+}
+
+.capaEscura div{
+  width: 100%;
 }
 
 @media screen and (max-width: 1200px) {
-  .containerHeader {
+  .container__tituloSessoes {
     width: 95%;
     margin: auto;
   }
