--- a/src/components/contatos/index.module.css
+++ b/src/components/contatos/index.module.css
@@ -85,8 +85,8 @@
     justify-content: center !important;
     width: 95%;
     margin: auto;
-    margin-top: 3rem;
-    margin-bottom: 3rem;
+    margin-top: 6rem;
+    margin-bottom: 6rem;
   }
 
   .container__form h1 {
@@ -103,6 +103,10 @@
     padding: 0.6rem 0.8rem;
     font-size: 1rem;
     width: 100%;
+  }
+
+  .container__input{
+    flex-direction: column;
   }
   
 }
