--- a/src/components/blog/index.module.css
+++ b/src/components/blog/index.module.css
@@ -165,70 +165,157 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 40%;
+  height: 100%;
+  gap: 1.5rem;
 }
 
-.containerAutorNoticia p{
-    font-size: 0.7em;
+.containerAutorNoticia p {
+  font-size: 0.7em;
 }
 
-.container__textosNoticias p{
-    text-align: justify;
+.container__textosNoticias p {
+  text-align: justify;
 }
 
 .containerAutorNoticia div:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+}
+
+.containerAutorNoticia p:first-child {
+  font-weight: bold;
+}
+
+.containerAutorNoticia p:nth-child(2) {
+  color: #6e6e73;
+}
+
+.container__infoInferior {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.moduloDataEvento {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.moduloDataEvento p {
+  font-size: 0.8em;
+  color: #6e6e73;
+}
+
+.iconCalendario {
+  color: #6e6e73;
+}
+
+.container__tituloSessoes {
+  font-size: 28px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+}
+
+.container__tituloSessoes h2 {
+  color: #1d1d1f;
+}
+
+.container__tituloSessoes span {
+  color: #6e6e73;
+}
+
+@media screen and (max-width: 1200px) {
+  .container {
+    width: 95%;
+    margin: auto;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
+    /* margin-top: 5rem; */
+  }
+
+  .container__grid {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto auto auto;
+    grid-template-areas:
+      "modulo1"
+      "modulo2"
+      "modulo3"
+      "modulo4";
+    gap: 2.5rem;
+    margin-top: 2rem;
+  }
+
+  #modulo1 {
     display: flex;
     flex-direction: column;
-    gap: 0.2rem;
-  }
-  
-  .containerAutorNoticia p:first-child {
-    font-weight: bold;
-  }
-  
-  .containerAutorNoticia p:nth-child(2) {
-    color: #6e6e73;
   }
 
-  .container__infoInferior{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  .container__imgCapa {
+    width: 100%;
+    height: 100%;
   }
 
-  .moduloDataEvento{
-    display: flex;
-    align-items: center;
+  .container__infomacao {
+    width: 100%;
+    gap: 1.5rem;
+  }
+
+  .container__imgNoticias {
+    width: 100%;
+    height: auto;
+  }
+
+  .container__imgNoticias img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 30px;
+  }
+  .celula {
+    /* background: red; */
+    height: auto;
+  }
+
+  .container__tituloSessoes {
+    text-align: start;
+    align-items: start;
+    flex-direction: column !important;
+    font-size: 1.4em;
+  }
+
+  .container__textosTop {
+    font-size: 0.8em;
     gap: 0.5rem;
   }
 
-  .moduloDataEvento p{
-    font-size: 0.8em;
-    color: #6e6e73;
+  .foto__autor {
+    width: 40px;
+    height: 40px;
   }
 
-  .iconCalendario{
-    color: #6e6e73;
+  .containerAutor {
+    gap: 0.5rem;
   }
 
-  @media screen and (max-width: 1200px) {
-    .container__grid {
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-template-rows: 1fr 1fr 1fr 1fr;
-      grid-template-areas:
-        "modulo1"
-        "modulo2" 
-        "modulo3" 
-        "modulo4";
-      gap: 2.5rem;
-      margin-top: 2rem;
-    }
-    #modulo1{
-      flex-direction: column;
-    }
+  .containerAutor p {
+    font-size: 0.7em;
   }
-  
-  @media screen and (max-width: 768px) {
+
+  .container__textosTop h2 {
+    font-size: 1rem;
   }
-  
+  .container__moduloNoticia {
+    height: auto;
+  }
+
+  #modulo1{
+    gap:1rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+}
