--- a/src/components/casaSementes/index.module.css
+++ b/src/components/casaSementes/index.module.css
@@ -1,8 +1,5 @@
 .container {
   height: 98vh;
-  margin: auto;
-  max-width: 1280px;
-  /* background-color: red; */
 }
 
 .container__grid {
@@ -10,68 +7,61 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
   grid-template-areas: "modulo1 modulo2";
-  /* margin-top: 4rem; */ 
 }
-
-/* .celula {
-  height: 90vh;
-} */
 
 #modulo1 {
   grid-area: modulo1;
-  /* background-color: red; */
   display: flex;
   justify-content: center;
 }
 
-#modulo1 h1{
-    font-size: 10em;
+#modulo1 h1 {
+  font-size: 10em;
 }
 
 #modulo2 {
   grid-area: modulo2;
-  /* background-color: blue; */
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-#modulo2 p{
-    text-align: justify;
-    color: #6E6E73;
+#modulo2 p {
+  text-align: justify;
+  color: #6e6e73;
 }
 
-.mais{
-    font-size: 0.5em;
+.mais {
+  font-size: 0.5em;
 }
 
-#modulo1 p span{
-    color: #6E6E73;
+#modulo1 p span {
+  color: #6e6e73;
 }
 
-#modulo1 p span{
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+#modulo1 p span {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
-.container__div{
+.container__div {
   display: flex;
   height: 100%;
   align-items: center;
 }
 
-.container__tituloSessoes{
+.container__tituloSessoes {
   font-size: 28px;
   font-weight: 600;
   display: flex;
   align-items: center;
 }
 
-.container__tituloSessoes h2{
+.container__tituloSessoes h2 {
   color: #1d1d1f;
 }
 
-.container__tituloSessoes span{
+.container__tituloSessoes span {
   color: #6e6e73;
 }
 
@@ -79,13 +69,13 @@
   .container__grid {
     grid-template-columns: 1fr;
     grid-template-rows: auto auto;
-    grid-template-areas: 
-    "modulo1"
-    "modulo2";
+    grid-template-areas:
+      "modulo1"
+      "modulo2";
     gap: 2rem;
   }
 
-  .container{
+  .container {
     width: 95%;
     margin: auto;
     height: auto;
@@ -93,7 +83,7 @@
     margin-bottom: 6rem;
   }
 
-  .container__div{
+  .container__div {
     margin-top: 3rem;
     margin-bottom: 3rem;
   }
@@ -104,7 +94,6 @@
     flex-direction: column !important;
     font-size: 1.4em;
   }
-  
 }
 
 @media screen and (max-width: 768px) {
