--- a/src/components/galeria/index.module.css
+++ b/src/components/galeria/index.module.css
@@ -1,7 +1,7 @@
 .container {
   height: auto;
-  max-width: 1280px;
-  margin: auto;
+  /* max-width: 1280px;
+  margin: auto; */
   margin-top: 4rem;
 }
 
