--- a/src/components/parceiros/index.module.css
+++ b/src/components/parceiros/index.module.css
@@ -92,7 +92,7 @@
 
 #parceiro13 {
   grid-area: parceiro13;
-  background: #e7e7e75d; 
+  background: #e7e7e75d;
 }
 
 #parceiro14 {
@@ -105,38 +105,34 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-areas:
-      "parceiro1 parceiro2" 
-      "parceiro3 parceiro4" 
-      "parceiro5 parceiro6" 
+      "parceiro1 parceiro2"
+      "parceiro3 parceiro4"
+      "parceiro5 parceiro6"
       "parceiro7 parceiro8"
-      "parceiro9 parceiro10" 
-      "parceiro11 parceiro12" 
+      "parceiro9 parceiro10"
+      "parceiro11 parceiro12"
       "parceiro13 parceiro14";
-      /* "parceiro15 parceiro16"
-      "parceiro17 parceiro18"; */
     gap: 1rem;
   }
   .container {
     height: auto;
-    width: 95%;
+    width: 100%;
     margin: auto;
+    padding-bottom: 5rem;
   }
-  #parceiro15{
+  #parceiro15 {
     display: none;
   }
-  #parceiro16{
+  #parceiro16 {
     display: none;
   }
-  #parceiro17{
+  #parceiro17 {
     display: none;
   }
-  #parceiro18{
+  #parceiro18 {
     display: none;
   }
   .container__p {
     width: 100%;
   }
-}
-
-@media screen and (max-width: 768px) {
 }
