--- a/src/components/galeria/index.module.css
+++ b/src/components/galeria/index.module.css
@@ -76,10 +76,6 @@
   color: #6e6e73;
 }
 
-/* .containerSlide{
-  height: 60vh;
-} */
-
 .swiper__slide{
   height: 6rem;
   border-radius: 20px;
@@ -100,6 +96,20 @@
 
 
 @media screen and (max-width: 1200px) {
+  .container__grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-areas:
+      "img1 img2" 
+      "img3 img4" 
+      "img5 img6"
+      "img7 img8";
+    gap: 1rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
   .containerSlide{
     display: flex !important;
   }
@@ -133,7 +143,4 @@
     flex-direction: column !important;
     font-size: 1.4em;
   }
-}
-
-@media screen and (max-width: 768px) {
 }
