--- a/src/components/casaSementes/index.module.css
+++ b/src/components/casaSementes/index.module.css
@@ -1,5 +1,5 @@
 .container {
-  height: 98vh;
+  min-height: 90vh;
 }
 
 .container__grid {
@@ -65,7 +65,34 @@
   color: #6e6e73;
 }
 
+.collapse{
+  background: none;
+  width: 100%;
+}
+
+.container__collapse{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  height:100%;
+  padding-top: 5rem;
+}
+
+.header{
+  display:flex;
+  justify-content:space-between;
+}
+
+.header p{
+  padding-left: 1.5rem;
+  font-size: 18px;
+}
+
 @media screen and (max-width: 1200px) {
+  .container__collapse{
+    padding-top: 3rem;
+  }
+
   .container__grid {
     grid-template-columns: 1fr;
     grid-template-rows: auto auto;
@@ -79,6 +106,7 @@
     width: 100%;
     margin: auto;
     height: auto;
+    min-height: auto;
     margin-top: 6rem;
     margin-bottom: 6rem;
   }
